<resources>
    <string name="app_name">Biedobus</string>
    <string name="title_activity_powitanie">Powitanie</string>
    <string name="Station_From">WRO</string>
    <string name="time_and_date">Tu data i godzina</string>
    <string name="Station_To">OLE</string>
    <string name="Date_and_Time">Data i godzina</string>
    <string name="time_from">16:02</string>
    <string name="Date_To">16:55</string>
</resources>
